Responsive en la seccion efemerides

--- a/pages/efemerides.html
+++ b/pages/efemerides.html
@@ -20,5 +20,23 @@
             <li><a href="./contacto.html">Contacto</a></li>
         </ul>
     </nav>
+    <main class="main-efemerides">
+        <h1>Efemérides</h1>
+        <h2>Efemérides Gatitos</h2>
+        <section class="grilla-efemerides">
+            <div><img src="https://placekitten.com/500/500" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/504" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/503" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/494" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/493" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/495" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/506" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/505" alt="gatito"></div>
+            <div><img src="https://placekitten.com/500/500" alt="gatito"></div>
+        </section>
+        <iframe class="video-iframe" src="https://www.youtube.com/embed/G7AYfZNk418?si=p2FWQFXBs0Es64-R" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+            
+        </iframe>
+    </main>
 </body>
 </html>
