--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- Contenido principal -->
-    <h1>Noticias y medios en español</h1>
+    <h1 class="h1-index">Noticias y medios en español</h1>
     <!-- Imagenes -->
 
     <section class="seccion1-index">
